--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 body {
     background-image: url('b6.jpeg');
     color: white;
-}
+}    
 
 .box {
     background: linear-gradient(115deg, #855988, #6B4984, #483475, #2B2F77, #141852, #070B34);
@@ -116,6 +116,73 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+  }
+
+@media (max-width: 768px) {
+    .box {
+      max-width: 90%;
+      margin: 50px auto;
+      padding: 30px 20px;
+    }
+  
+    .search-box input {
+      font-size: 16px;
+      height: 50px;
+    }
+  
+    .search-box button {
+      width: 50px;
+      height: 50px;
+    }
+  
+    .weather h1 {
+      font-size: 60px;
+    }
+  
+    .weather h2 {
+      font-size: 35px;
+    }
+  
+    .icon {
+      margin: 20px;
+    }
+  
+    .col {
+      margin-bottom: 20px;
+    }
+  
+    .humidity,
+    .wind {
+      font-size: 24px;
+    }
+  }
+  
+  @media (max-width: 480px) {
+    .weather h1 {
+      font-size: 50px;
+    }
+  
+    .weather h2 {
+      font-size: 30px;
+    }
+  
+    .icon {
+      margin: 15px;
+    }
+  
+    .humidity,
+    .wind {
+      font-size: 20px;
+    }
+  
+    .det {
+      flex-direction: column;
+      align-items: flex-start;
+    }
+  
+    .col {
+      margin-bottom: 10px;
+    }
   }
   
   
